Đã bổ sung phân quyền khi vào trang, dễ dàng tạo ra ở middleware